# weather-rs

./: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js  vercel.json
assets/: tailwind.css.br
src/: main.rs
